        PR debug/39086         * tree-nrv.c (tree_nrv): Don't do this optimization if the front         end already did.  Notice GIMPLE_CALL modifications of the result.         Don't copy debug information from an ignored decl or a decl from         another function.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@144772 138bc75d-0d04-0410-961f-82ee72b054a4